Horizontal Scroll Fixed

--- a/New/assets/styles/css/style-1.css
+++ b/New/assets/styles/css/style-1.css
@@ -1278,7 +1278,7 @@ header h1 {
     }
     .board {
         background-size: 200px 200px !important;
-        top: 25vh !important;
+        top: 30vh !important;
         left: 30px !important;
     }
     .board.cloud-1 {
